<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="settings_change_gesture"
        android:title="@string/set_up_gesture"/>
    <Preference
        android:title="@string/custom_shortcuts"
        android:summary="@string/custom_shortcuts_desc"
        android:key="settings_custom_shortcuts">
        <intent android:action="android.intent.action.VIEW"
            android:targetPackage="me.rijul.gestureunlock"
            android:targetClass="me.rijul.gestureunlock.CustomShortcutActivity"/>
    </Preference>
    <Preference
        android:title="@string/about"
        android:summary="@string/about_desc"
        android:key="settings_about">
        <intent android:action="android.intent.action.VIEW"
            android:targetPackage="me.rijul.gestureunlock"
            android:targetClass="me.rijul.gestureunlock.AboutActivity"/>
    </Preference>
    <Preference
        android:title="@string/pref_restart_keyguard"
        android:key="settings_restart_keyguard">
    </Preference>

    <PreferenceCategory
        android:title="@string/app_settings">
        <SwitchPreference
            android:defaultValue="false"
            android:key="settings_hide_launcher"
            android:title="@string/hide_launcher" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="settings_failsafe"
            android:title="@string/failsafe"
            android:summaryOn="@string/failsafe_summary_on"
            android:summaryOff="@string/failsafe_summary_off"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Gesture Appearance">
        <SwitchPreference
            android:defaultValue="false"
            android:key="settings_gesture_background"
            android:title="@string/show_gesture_background" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="settings_gesture_visible"
            android:title="@string/show_gesture" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="settings_gesture_correct"
            android:title="@string/show_gesture_correct" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="settings_gesture_error"
            android:title="@string/show_gesture_error" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="settings_gesture_dialog"
            android:title="@string/show_dialog"
            android:summary="@string/show_dialog_desc"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="settings_gesture_text"
            android:title="@string/show_text"
            android:summary="@string/show_text_desc"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/emergency_button">
        <SwitchPreference
            android:defaultValue="true"
            android:key="settings_emergency_button"
            android:title="@string/show_emergency_button"
            android:summaryOff="@string/failsafe_summary_off"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="settings_emergency_text"
            android:title="@string/show_emergency_text"
            android:summaryOff="@string/show_emergency_text_summary_off"
            android:dependency="settings_emergency_button"/>
    </PreferenceCategory>

    </PreferenceScreen>